--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ os: osx
 python:
   - "2.7"
   - "3.4"
-install: pip install -r requirements.txt --quiet
-script: make analyze && make test
+install:
+  - pip install -r requirements.txt --quiet
+  - pip install --editable .
+script:
+  - make analyze
+  - make test
